Fixed bug #24980 (array_reduce() uses first element as default running total). Fixed memory leak that can be replicated using the function example on http://www.php.net/array_reduce